--- a/webdev.html
+++ b/webdev.html
@@ -29,7 +29,7 @@
 </body>
 </html> -->
 
-<<!DOCTYPE html>
+<!-- <<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -87,4 +87,4 @@
 
     <script src="webdev.js"></script>
 </body>
-</html>
+</html> -->
