--- a/webdev.html
+++ b/webdev.html
@@ -88,3 +88,21 @@
     <script src="webdev.js"></script>
 </body>
 </html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+<form id="myForm">
+    <label for="city">search city</label>
+    <input type ="text" id="city">
+    <input type="submit" value="Search">
+</form>
+<script src="webdev.js"></script>
+</body>
+</html>
